WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24440
Context menus are broken on pages using accelerated compositing
https://bugs.webkit.org/show_bug.cgi?id=24440
Summary
Context menus are broken on pages using accelerated compositing
Simon Fraser (smfr)
Reported
2009-03-06 16:57:02 PST
When a WebHTMLView goes into accelerated compositing mode, a subview is added to host layers. This subview intercepts right clicks (see <
rdar://problem/6656586
>), which breaks context menu handling.
Attachments
Patch, changelog
(1.97 KB, patch)
2009-03-06 17:00 PST
,
Simon Fraser (smfr)
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-03-06 17:00:13 PST
Created
attachment 28379
[details]
Patch, changelog
Cameron Zwarich (cpst)
Comment 2
2009-03-06 20:41:54 PST
Comment on
attachment 28379
[details]
Patch, changelog r=me
Simon Fraser (smfr)
Comment 3
2009-03-09 09:54:27 PDT
http://trac.webkit.org/changeset/41529
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug