2009-03-09  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Oliver Hunt and Cameron Zwarich

        https://bugs.webkit.org/show_bug.cgi?id=24440

        The sublayer added to WebHTMLView to host accelerated compositing layers needs to
        be a subclass of NSView which allows context menu clicks through.

        * WebView/WebHTMLView.mm:
        (-[WebLayerHostingView rightMouseDown:]):
        (-[WebHTMLView attachRootLayer:]):

Canonical link: https://commits.webkit.org/33597@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41529 268f45cc-cd09-0410-ab3c-d52691b4dbfc