WebKit/mac/WebView/WebHTMLView.mm
@@ -177,6 +177,20 @@ static void setCursor(NSWindow* self, SEL cmd, NSPoint point)
 }
 #endif
 
+#if USE(ACCELERATED_COMPOSITING)
+@interface WebLayerHostingView : NSView
+@end
+
+@implementation WebLayerHostingView
+// Empty NSViews intercept rightMouseDown: to do context menu handling, but we need the WebLayerHostingView to
+// let right mouse clicks through.
+- (void)rightMouseDown:(NSEvent *)theEvent
+{
+    [[self nextResponder] performSelector:_cmd withObject:theEvent];
+}
+@end
+#endif // USE(ACCELERATED_COMPOSITING)
+
 extern "C" {
 
 // Need to declare these attribute names because AppKit exports them but does not make them available in API or SPI headers.
@@ -5067,7 +5081,7 @@ static CGPoint coreGraphicsScreenPointForAppKitScreenPoint(NSPoint point)
 - (void)attachRootLayer:(CALayer*)layer
 {
     if (!_private->layerHostingView) {
-        NSView* hostingView = [[NSView alloc] initWithFrame:[self bounds]];
+        WebLayerHostingView* hostingView = [[WebLayerHostingView alloc] initWithFrame:[self bounds]];
         [hostingView setAutoresizingMask:(NSViewWidthSizable | NSViewHeightSizable)];
         [self addSubview:hostingView];
         [hostingView release];
